--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="form.html">Formularz zgłoszeniowy</a></li>
                 <li><a href="tabela.html">Tabela wyników</a></li>
-                <li><a href="gallery.html">Galeria zdjęć</a></li>
+                <li><a href="gallery/gallery.html">Galeria zdjęć</a></li>
                 <li><a href="diy-herb.html">Narysuj herb</a></li>
                 <li><a href="round-map.html">Mapa kolejki</a></li>
                 <li><a href="xG.html">xG</a></li>
