--- a/gallery.html
+++ b/gallery.html
@@ -50,8 +50,20 @@
 <script>
     const images = [
         "./gallery/BARCA-HERB.jpg",
-        "./gallery/BAYNER-HERB.jpg",
+        "./gallery/BAYERN-HERB.jpg",
         "./gallery/BVB-HERB.jpg",
+        "./gallery/CITY-HERB.jpg",
+        "./gallery/MBAPPE.jpg",
+        "./gallery/LECH-HERB.jpg",
+        "./gallery/MESSI.jpg",
+        "./gallery/MISTRZOWIE.jpg",
+        "./gallery/PSG-HERB.jpg",
+        "./gallery/PUCHAR.jpg",
+        "./gallery/REAL-HERB.jpg",
+        "./gallery/RONALDO.jpg",
+        "./gallery/UNITED-HERB.jpg",
+        "./gallery/ZŁOTA-PIŁKA.jpg",
+       
         // Dodaj więcej ścieżek do innych obrazów
     ];
 
